--- a/aa-completed/radio-select-image-v1/css/style.css
+++ b/aa-completed/radio-select-image-v1/css/style.css
@@ -4,6 +4,7 @@
 body {
   font-family: "Releway", sans-serif;
   line-height: 1.5em;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,35 +17,20 @@ a {
 }
 
 .tab-inner {
-  /*  */
-  border: 1px solid #333;
+  /* border: 1px solid red; */
   width: 300px;
   height: 350px;
-  position: relative;
-  /*  */
+  position: absolute;
 }
 
-input[name="tabmenu"] {
-  /*  */
+input[name="tab-menu"] {
   display: none;
 }
-
-.content {
-  display: none;
-  /*  */
-  /* border: 4px solid pink; */
-}
-
-/*  */
-.content img {
-  width: 100%;
-  height: 300px;
-}
-/*  */
 
 .btn {
   position: absolute;
   width: 100%;
+  /* border: 1px solid blue; */
   text-align: center;
   bottom: 0;
 }
@@ -58,7 +44,15 @@ input[name="tabmenu"] {
   cursor: pointer;
 }
 
-/*  */
+.content {
+  display: none;
+}
+
+.content img {
+  width: 100%;
+  height: 300px;
+}
+
 input[id="tab1"]:checked ~ .slide1 {
   display: block;
 }
@@ -82,6 +76,3 @@ input[id=tab2]:checked ~ .btn label[for=tab2] {
 input[id=tab3]:checked ~ .btn label[for=tab3] {
   background-color: crimson;
 }
-
-/*  */
-
