--- a/aa-completed/radio-select-image-v2/css/style.css
+++ b/aa-completed/radio-select-image-v2/css/style.css
@@ -17,7 +17,7 @@ a {
 }
 
 .tab-inner {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   width: 300px;
   height: 350px;
   position: absolute;
@@ -30,7 +30,7 @@ input[name="tab-menu"] {
 .btn {
   position: absolute;
   width: 100%;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   text-align: center;
   bottom: 0;
 }
@@ -45,5 +45,46 @@ input[name="tab-menu"] {
 }
 
 .content {
-  display: none;
+  /* display: none; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: 0.4s;
+  visibility: hidden;
+}
+
+.content img {
+  width: 100%;
+  height: 300px;
+}
+
+input[id="tab1"]:checked ~ .slide1 {
+  opacity: 1;
+  visibility: visible;
+
+}
+
+input[id="tab2"]:checked ~ .slide2 {
+  opacity: 1;
+  visibility: visible;
+
+}
+
+input[id="tab3"]:checked ~ .slide3 {
+  opacity: 1;
+  visibility: visible;
+
+}
+
+input[id="tab1"]:checked ~ .btn label[for="tab1"] {
+  background-color: crimson;
+}
+
+input[id="tab2"]:checked ~ .btn label[for="tab2"] {
+  background-color: crimson;
+}
+
+input[id="tab3"]:checked ~ .btn label[for="tab3"] {
+  background-color: crimson;
 }
